Updates for Kafka 3.9.0
* Changes to reflect changes in the classes used to format KRaft storage

Signed-off-by: kwall <kwall@apache.org>